@@ -135,6 +135,22 @@ namespace AndroidPlusPlus.Common
     ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
     ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+    public AndroidProcess [] GetChildProcessesFromPid (uint processId)
+    {
+      List<AndroidProcess> processesList;
+
+      if (m_deviceProcessesByPpid.TryGetValue (processId, out processesList))
+      {
+        return processesList.ToArray ();
+      }
+
+      return null;
+    }
+
+    ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+    ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+    ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
     public uint [] GetActivePids ()
     {
       uint [] activePids = new uint [m_deviceProcessesByPid.Count];
