@@ -46,8 +46,6 @@ namespace AndroidPlusPlus.Common
 
     private string [] m_pkgFlags;
 
-    private HashSet<uint> m_threadIds;
-
     ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
     ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
     ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
